<resources>
    <string name="app_name">DerivativeApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="sign_in">登  录</string>
    <string name="register">注  册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="open_drawlayout">Open Drawlayout</string>
    <string name="close_drawlayout">Close Drawlayout</string>
    <string name="updown">涨跌:</string>
    <string name= "EA">欧美:</string>
    <string name="excutePrice">执行价格:</string>
    <string name="ddl">截至日期:</string>
    <string name ="datechoose">选择日期:</string>
    <string name = "confirmOrder">下单确认</string>
    <string name="title_activity_order">OrderActivity</string>
    <string-array name = "order_item_array">
        <item>订单编号：</item>
        <item>客户账号：</item>
        <item>期权名称：</item>
        <item>期权类型：</item>
        <item>交易类型：</item>
        <item>交易形式：</item>
        <item>执行价格：</item>
        <item>交易价格：</item>
        <item>交易手数：</item>
        <item>交易时间：</item>
        <item>截至日期：</item>
        <item>到期时间：</item>
    </string-array>
    <string-array name = "testcase_example">
        <item>0D00015549</item>
        <item>131250095</item>
        <item>二元期权-资产或无价值期权</item>
        <item>看跌-美式</item>
        <item>开仓</item>
        <item>卖出</item>
        <item>12.0</item>
        <item>0.0</item>
        <item>12</item>
        <item>2015-10-18 15：01：02</item>
        <item>2015-10-24</item>
        <item>6天</item>
    </string-array>

</resources>
