<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sandybrown"
    android:orientation="vertical"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@drawable/welcome"
        />
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:layout_gravity="center_vertical"
       android:layout_weight="3"
       >

      <EditText
          android:id="@+id/textview_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/account_hint"
          android:layout_marginLeft="@dimen/login_editview_margin"
          android:layout_marginRight="@dimen/login_editview_margin"
          android:text="dinfegn火候dddd"
          android:maxLines="1"
          android:textSize="20sp"
          />
       <EditText
           android:id="@+id/textview_password"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/password_hint"
           android:inputType="textPassword"
           android:layout_marginLeft="@dimen/login_editview_margin"
           android:layout_marginRight="@dimen/login_editview_margin"
           android:layout_marginTop="@dimen/login_between_editview_vertical"
           android:text="dingfeng"
           android:maxLines="1"
           android:textSize="20sp"
           />
       <Button
           android:id = "@+id/signin_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/sign_in"
           android:layout_marginLeft="@dimen/login_editview_margin"
           android:layout_marginRight="@dimen/login_editview_margin"
           android:textSize="30sp"
           android:layout_marginTop="@dimen/login_between_editview_vertical"
           android:background="@drawable/login_button"
           android:onClick="button_click"
           />
       <Button
           android:id = "@+id/register_button"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/register"
           android:layout_marginLeft="@dimen/login_editview_margin"
           android:layout_marginRight="@dimen/login_editview_margin"
           android:layout_marginTop="@dimen/login_button_vertical"
           android:textSize="30sp"
           android:background="@drawable/login_button"
           android:onClick="button_click"
           android:enabled="false"
           />
   </LinearLayout>

</LinearLayout>
